--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -13,16 +13,18 @@
     outline: none;
 
 }
-&:hover{
-    color:blue;
-    border-radius: 3px solid blue;
-}
+
 
 .button{
-    padding: 12px 12px;
+    padding: 10px 10px;
     cursor: pointer;
-    border-radius: 3px;
-    border: 3px solid grey;
+    border-radius: 6px;
+    border: 3px solid black;
     font-size: 20px;
     font-weight: 500;
+}
+
+.button:hover {
+    color: white;
+   background-color: blue;
 }
