--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -3,3 +3,33 @@
     max-width: 1170px;
 }
 
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 8px 0;
+    margin-bottom: 14px;
+}
+
+.nav{
+    margin-bottom: 24px;
+}
+
+.list{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    display: flex;
+    gap: 18px;
+    padding: 14px;
+    list-style: none;
+}
+
+/* .items{
+    color: #ffc700;
+} */
+.items.active{
+color: #fff;
+}
